# GeoScience_Tutorial

./: .gitignore  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
geoscience_utils/: era5_data_processor.py  fsspec_utils.py
geoscience_utils/modeling/: predict.py  train.py
notebooks/: hvplot_tutorial.ipynb
notebooks/dataset_finding/: himawari_tutorial.ipynb
tutorial/: LICENSE  Makefile  README.md  environment.yml  package_play_ground.ipynb  xee_tutorial.ipynb
tutorial/geoscience_utils/: __init__.py  dataset.py  features.py  plots.py
tutorial/notebooks/: all_pipeline.ipynb  icechunk_tutorial.ipynb  virtualizarr_tutorial.ipynb
tutorial/notebooks/dataset_finding/: era5_tutorial.ipynb  gee_catalog_explore.ipynb
