[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geoscience_utils"
version = "0.0.1"
description = "Provide the geoscience tutorial on useful package and real-world example"
authors = [
  { name = "NTU-CompHydroMet-Lab" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["geoscience_utils"]
include = ["pyproject.toml", "geoscience_utils/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["geoscience_utils"]
force-sort-within-sections = true

